<package>  
  <name>libsgbot-ros</name>  
  <version>0.0.1</version>  
  <description>libsgbot ROS samples</description>  
  <maintainer email="cyberniklee@gmail.com">Cybernik Lee</maintainer>  
  
  <license>BSD</license>  
  
  <url type="website">https://github.com/cyberniklee/libsgbot</url>  
  
  <author email="cyberniklee@gmail.com">Maintained by Cybernik Lee</author>  
  
  <buildtool_depend>catkin</buildtool_depend>  
  
  <export>  
    <metapackage/>  
  </export>  
</package>
